--- a/styles_chiffre.css
+++ b/styles_chiffre.css
@@ -20,6 +20,11 @@ header a{
   background-color: antiquewhite;
 }
 
+#Pageactuelle{
+  font-size: large;
+  font-weight: bold;
+}
+
 
 
 
@@ -68,7 +73,7 @@ body{
 footer{
   display: grid;
   background-color: #515457;
-  grid-template-columns: 250px 120px 300px;
+  grid-template-columns: 250px 120px 225px;
   align-items: start;
   justify-content: space-between;
 
