--- a/styles_moment.css
+++ b/styles_moment.css
@@ -46,29 +46,32 @@ header{
 #Contenu {
     background-color: #bcbcc0;
     width: 90vw;
+    margin: auto;
 }
 
 #Article {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: center;
 }
 
 #article1 {
     background-image: url(https://www.alwaysforkeyboard.com/wp-content/uploads/2023/12/marvels_blade_1.jpg) ;
     background-size: cover;
-    width: 30%;
+    width: 40%;
     height: 25vh;
     text-align: center;
     border-radius: 15px;
+    margin: 30px;
 }
 #article2 {
   background-image: url(https://mspoweruser.com/wp-content/uploads/2021/09/Redfall-130921.jpg) ;
   background-size: cover;
-  width: 30%;
+  width: 40%;
   height: 25vh;
   text-align: center;
   border-radius: 15px;
+  margin: 30px;
 }
 .texte>h2 {
     margin-top: 75px;
@@ -82,7 +85,16 @@ header{
 }
 
 
+#Image>img{
+  width: 10%;
+  height: 60vh;}
 
+
+#Contenu {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin: 10px;}
 
 
  /* Footer */
