--- a/stylesEconomie.css
+++ b/stylesEconomie.css
@@ -167,7 +167,7 @@ footer>div{
     align-items: center;
     background-color: grey;
     border-radius: 50px;
-    height: 200px;
+    min-height: 200px;
     width: 75%;
     border-right: 5px;
 
@@ -198,4 +198,25 @@ footer>div{
   .eltd{
     margin-top: 50px;
     width: 250px;
+  }
+
+  .texte_ecolo{
+    display: flex;
+    background-color: grey;
+    border-radius: 50px;
+    padding-left: 15px;
+    padding-top: 15px;
+    padding-bottom: 10px;
+    align-items: center;
+  }
+
+  .img_eco>img{
+    height: 300px;
+    width: 300px;
+    border-top-right-radius: 50px;
+    border-bottom-right-radius: 50px;
+  }
+
+  .texte_ecolo>span{
+    color: white;
   }
