--- a/styles_Presentation.css
+++ b/styles_Presentation.css
@@ -1,14 +1,3 @@
-body{
-  margin: 0;
-}
-
-header{
-  background-color: aliceblue;
-  padding:0px;
-  position: fixed;
-  width: 100%;
-}
-
 header div{
   display: flex;
   justify-content: space-around;
@@ -44,10 +33,6 @@ font-size: 22px ;
   font-weight: bold;
 }
 
-body {
-  margin: 0; 
-}
-
 .Page {
   padding-top: 160px;
   margin-left: 100px;
@@ -56,41 +41,41 @@ body {
 
 .container {
   display: flex;
-  flex-direction: row; /* Disposition en ligne pour avoir le texte et les images côte à côte */
+  flex-direction: row; 
   gap: 30px; /* Espace entre le texte et les images */
 }
 
 .text-container {
-  width: 60%; /* Zone de texte prenant 60% de la largeur */
-  padding: 30px; /* Ajout de padding pour l'espacement */
-  background-color: rgba(127, 127, 127, 0.1); /* Couleur d'arrière-plan */
-  border-radius: 10px; /* Coins arrondis */
+  width: 60%; 
+  padding: 30px; 
+  background-color: rgba(127, 127, 127, 0.1); 
+  border-radius: 10px; 
 }
 
 #texte2 {
   margin-top: 20px;
-  width: 100%; /* Zone de texte prenant 100% de la largeur */
-  padding: 30px; /* Ajout de padding pour l'espacement */
-  background-color: rgba(127, 127, 127, 0.1); /* Couleur d'arrière-plan */
-  border-radius: 10px; /* Coins arrondis */
+  width: 100%; 
+  padding: 30px; 
+  background-color: rgba(127, 127, 127, 0.1); 
+  border-radius: 10px; 
 }
 
 .images-container {
   display: flex;
-  flex-direction: column; /* Empiler les images */
+  flex-direction: column; 
   width: 40%; /* Largeur des images */
   gap: 10px; /* Espace entre les images */
 }
 
 .ptitimage {
   display: flex;
-  flex-direction: row; /* Aligner les images */
-  width: 50%; /* Largeur des images */
-  gap: 10px; /* Espace entre les images */
+  flex-direction: row; 
+  width: 50%; 
+  gap: 10px; 
 }
 
 .item-image {
-  width: 100%; /* Prendre toute la largeur disponible dans la colonne */
+  width: 100%; 
   border-radius: 10px;
 }
 
