--- a/styles_Presentation.css
+++ b/styles_Presentation.css
@@ -1,3 +1,14 @@
+body{
+  margin: 0;
+}
+
+header{
+  background-color: aliceblue;
+  padding:0px;
+  position: fixed;
+  width: 100%;
+}
+
 header div{
   display: flex;
   justify-content: space-around;
