--- a/styles_Presentation.css
+++ b/styles_Presentation.css
@@ -91,23 +91,35 @@ font-size: 22px ;
 }
 
 
-footer {
-  display: grid;
+footer{
+  display: flex;
   background-color: #515457;
   grid-template-columns: 250px 120px 225px;
   align-items: start;
-  justify-content: space-between;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  flex-direction: row;
 
   color: aliceblue;
   margin-top: 30px;
-
+  
   font-size: 20px;
 }
 
-footer > div {
+
+footer>div{
   padding-top: 10px;
 }
 
-.Reseau {
+.Reseau{
   margin-left: 15px;
+}
+
+@media (max-width: 650px){
+  footer{
+    iframe {
+      display: none;
+    }
+  }
+  
 }
