--- a/styles_acc.css
+++ b/styles_acc.css
@@ -1,9 +1,10 @@
 html{
     font-family: sans-serif;
+    background-color: #B53A00;
 }
 
 section{
-    background-color: #B53A00;
+    background-color: #F1691B;
 }
 
 body{
@@ -12,7 +13,7 @@ body{
 
 /*---- ZONE HAUTE DE LA PAGE ----*/
 header{
-    background-color: aliceblue;
+    background-color: #F1691B;
     padding:10px;
     position: fixed;
     width: 100%;
@@ -81,7 +82,7 @@ h1{
 }
 
 #pages div{
-    background-color: aliceblue;
+    background-color: #F1691B;
 
     display: flex;
     flex-direction: column;
