--- a/styles_acc.css
+++ b/styles_acc.css
@@ -25,7 +25,6 @@ header{
 
 header div{
     display: flex;
-    justify-content: space-around;
     align-items: flex-start;
 }
 
@@ -34,6 +33,8 @@ header a{
     color: black;
     outline: none;
     text-decoration: none;
+    text-align: center;
+
 }
 
 
@@ -43,11 +44,17 @@ header a{
     display: flex;
     align-items: center;
     justify-content: space-around;
+    background-color: #B53A00;
+}
+
+#Navigation{
+    justify-content: space-around;
+    
 }
 
 #Navigation a:hover{
-    color: blue;
-  font-size: 22px;
+    color: #74E6C7;
+    font-size: 22px;
 }
 
 
@@ -62,12 +69,15 @@ h1{
 
 #logo{
     margin-bottom: 10px;
+    
 }
 
 /*---- ZONE CENTRALE DE LA PAGE ----*/
 
 .Bandeau_acc{
-    margin-top: 170px;
+    margin-top: 250px;
+    background-color: #66412b;
+    color: #ede9dd;
 }
 
 .contenu{
@@ -82,7 +92,7 @@ h1{
 }
 
 #pages div{
-    background-color: #F1691B;
+    background-color: #99532b;
 
     display: flex;
     flex-direction: column;
@@ -106,13 +116,9 @@ h1{
     font-weight: bold;
 }
 
-.contenu:hover , .image:hover{
+.contenu:hover , .image:hover .contenu{
     font-weight: bolder;
     color: #74E6C7;
-}
-
-.contenu{
-    color: #ede9dd;
 }
 
 
