--- a/styles_acc.css
+++ b/styles_acc.css
@@ -1,6 +1,6 @@
 html{
     font-family: sans-serif;
-    background-color: #B53A00;
+    background: linear-gradient(#F1691B, white);
 }
 
 section{
@@ -13,14 +13,14 @@ body{
 
 /*---- ZONE HAUTE DE LA PAGE ----*/
 header{
-    background-color: #F1691B;
+    background-color: #ff823a;
     padding:10px;
     position: fixed;
     width: 100%;
 
     z-index: 10;
     top: 0;
-    margin-bottom: 10px;
+
 }
 
 header div{
@@ -37,14 +37,15 @@ header a{
 
 }
 
-
 #Navigation>a{
     height: 50px;
     width: 18%;
     display: flex;
     align-items: center;
     justify-content: space-around;
-    background-color: #B53A00;
+    background-color: #B53a00;
+
+    border-radius: 0% 35%;
 }
 
 #Navigation{
@@ -75,8 +76,9 @@ h1{
 /*---- ZONE CENTRALE DE LA PAGE ----*/
 
 .Bandeau_acc{
-    margin-top: 250px;
+    margin-top: 280px;
     background-color: #66412b;
+    padding: 10px;
     color: #ede9dd;
 }
 
@@ -86,20 +88,17 @@ h1{
 }
 
 .image a{
-    color: black;
+    color: rgb(0, 0, 0);
     outline: none;
     text-decoration: none;
 }
 
 #pages div{
-    background-color: #99532b;
 
     display: flex;
     flex-direction: column;
     margin: 10px;
     padding:10px;
-
-    box-shadow: 0px 5px 10px 0px rgba(250, 211, 84, 0.5)
 }
 
 #pages{
@@ -116,6 +115,11 @@ h1{
     font-weight: bold;
 }
 
+.contenu{
+    background-color: #99532b;
+    box-shadow: 0px 5px 10px 0px rgba(102, 65, 43, 1)
+}
+
 .contenu:hover , .image:hover .contenu{
     font-weight: bolder;
     color: #74E6C7;
@@ -124,16 +128,23 @@ h1{
 
 /*---- ZONE BASSE DE LA PAGE ----*/
 
+hr{
+    border: none;
+    border-top: 3px double #333;
+    color: #333;
+    overflow: visible;
+    height: 5px;
+}
+
 footer{
     display: flex;
-    background-color: #F1691B;
     grid-template-columns: 250px 120px 225px;
     align-items: start;
     justify-content: space-evenly;
     flex-wrap: wrap;
     flex-direction: row;
   
-    color: aliceblue;
+    color: rgb(0, 0, 0);
     margin-top: 30px;
     
     font-size: 20px;
