--- a/styles_Presentation.css
+++ b/styles_Presentation.css
@@ -11,13 +11,15 @@ h1 {
   font-family: 'Fjalla One', sans-serif;
 }
 
+h2 {
+  margin-left: 40px;
+  font-family: 'Fjalla One', sans-serif;
+}
+
 section{
   background-color: #F1691B;
 }
 
-body{
-  margin: 0;
-}
 
 header{
   background-color: #ff823a;
