--- a/stylesEconomie.css
+++ b/stylesEconomie.css
@@ -1,17 +1,31 @@
+html{
+  font-family: sans-serif;
+  background: linear-gradient(#F1691B, white);
+}
+
+h1 {
+  font-family: 'Fjalla One', sans-serif;
+}
+
 body{
   margin: 0;
 }
 
 header{
-  background-color: aliceblue;
+  background-color: #ff823a;
   padding:10px;
   position: fixed;
   width: 100%;
+
+  font-family: 'Fjalla One', sans-serif;
+
+  z-index: 10;
+  top: 0;
+
 }
 
 header div{
   display: flex;
-  justify-content: space-around;
   align-items: flex-start;
 }
 
@@ -20,10 +34,8 @@ header a{
   color: black;
   outline: none;
   text-decoration: none;
-}
+  text-align: center;
 
-#logo{
-  margin-bottom: 10px;
 }
 
 #Navigation>a{
@@ -32,12 +44,21 @@ header a{
   display: flex;
   align-items: center;
   justify-content: space-around;
+  background-color: #B53a00;
+
+  border-radius: 0% 35%;
+}
+
+#Navigation{
+  justify-content: space-around;
+  
 }
 
 #Navigation a:hover{
-color: blue;
-font-size: 22px ;
+  color: #74E6C7;
+  font-size: 22px;
 }
+
 
 #Pageactuelle{
   font-size: 25px;
@@ -48,19 +69,31 @@ font-size: 22px ;
   padding-top: 160px;
 }
 
-footer{
-  display: flex;
-  background-color: #515457;
-  grid-template-columns: 250px 120px 225px;
-  align-items: start;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
-  flex-direction: row;
+hr{
+  border: none;
+  border-top: 3px double #333;
+  color: #333;
+  overflow: visible;
+  height: 5px;
+}
 
-  color: aliceblue;
+footer{
+
+  color: rgb(0, 0, 0);
   margin-top: 30px;
   
   font-size: 20px;
+}
+
+#copyright{
+  font-family: 'Roboto', sans-serif;
+
+  display: grid;
+  width: 100%;
+  grid-template-columns: 300px 220px;
+  align-items: start;
+  justify-content: space-between;
+
 }
 
 
@@ -68,9 +101,15 @@ footer>div{
   padding-top: 10px;
 }
 
-.Reseau{
-  margin-left: 15px;
+#socialMedias{
+  display: grid;
+  width: 100%;
+  grid-template-columns: 120px 120px 120px;
+  align-items: start;
+  justify-content: space-between;
 }
+
+
 
 @media (max-width: 650px){
   footer{
@@ -93,11 +132,16 @@ footer>div{
   margin-bottom: 75px;
 }
 
+section.economie{
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: space-around;
+}
+
   .div_container{
     display: flex;
-    justify-content: space-between;
-    margin-left: 5%;
-    margin-right: 7.5%;
+    justify-content: space-around;
   }
 
   .eltg{
@@ -107,7 +151,7 @@ footer>div{
   .texte1{
     display: flex;
     align-items: center;
-    background-color: grey;
+    background-color: #74E6C7;
     height: 300px;
     border-radius: 50px;
     width: 100%;
@@ -117,21 +161,19 @@ footer>div{
   .texte1>span{
     width: 100%;
     padding: 20px;
-    text-align: center;
+    text-align: start;
   }
 
   .graph{
     align-items: center;
     display: flex;
-    background-color: green;
-    height: 250px;
-    width: 250px;
     min-width: 250px;
     border-radius: 50px;
   }
 
   #g1{
     margin-bottom: 50px;
+    width: 100%;
   }
 
   #g2{
@@ -145,9 +187,10 @@ footer>div{
 
   .graph>img{
     height:250px ;
-    border: solid;
+    border: solid, 5px;
     border-radius: 50px;
     width: 100%;
+    border-color: #fad254;
   }
 
   h1 {
@@ -165,7 +208,7 @@ footer>div{
   .texte2{
     display: flex;
     align-items: center;
-    background-color: grey;
+    background-color: #74E6C7;
     border-radius: 50px;
     min-height: 200px;
     width: 75%;
@@ -176,13 +219,13 @@ footer>div{
   .texte2>span{
     width: 100%;
     padding: 20px;
-    text-align: center;
+    text-align: start;
   }
 
   .texte3{
     display: flex;
     align-items: center;
-    background-color: grey;
+    background-color: #74E6C7;
     border-radius: 50px;
     height: 500px;
     width: 100%;
@@ -191,18 +234,18 @@ footer>div{
   .texte3>span{
     padding-left: 10px;
     padding-right: 10px;
-    text-align: center;
-    max-width: 230px;
+    text-align: start;
+    max-width: 100%;
   }
 
   .eltd{
     margin-top: 50px;
-    width: 250px;
+    width: 25%;
   }
 
   .texte_ecolo{
     display: flex;
-    background-color: grey;
+    background:linear-gradient(#74E6C7,#fad254) ;
     border-radius: 50px;
     padding-left: 15px;
     padding-top: 15px;
@@ -218,5 +261,5 @@ footer>div{
   }
 
   .texte_ecolo>span{
-    color: white;
+    color: #000000;
   }
