--- a/stylesEconomie.css
+++ b/stylesEconomie.css
@@ -129,7 +129,18 @@ footer>div{
   margin-left: 50px;
   margin-right: 50px;
   margin-top: 25px;
-  margin-bottom: 75px;
+  margin-bottom: 25px;
+}
+
+.contextéco{
+  background-color: #74E6C7;
+  padding: 50px;
+  margin: 50px;
+  border-radius: 50px;
+}
+
+.contextéco>h2{
+  text-align: center;
 }
 
 section.economie{
@@ -142,20 +153,29 @@ section.economie{
   .div_container{
     display: flex;
     justify-content: space-around;
+    align-items: flex-start;
   }
 
   .eltg{
     width: 70%;
+    background-color: #B53a00;
+    padding: 5px;
+    border-radius: 50px;
   }
+
+#g3{
+  display: flex;
+  justify-content: flex-start;
+  padding-left: 5px;
+}
 
   .texte1{
     display: flex;
     align-items: center;
     background-color: #74E6C7;
-    height: 300px;
     border-radius: 50px;
-    width: 100%;
     margin-bottom: 50px;
+    flex-direction: row-reverse;
   }
 
   .texte1>span{
@@ -167,8 +187,9 @@ section.economie{
   .graph{
     align-items: center;
     display: flex;
-    min-width: 250px;
     border-radius: 50px;
+    justify-content: center;
+
   }
 
   #g1{
@@ -178,6 +199,8 @@ section.economie{
 
   #g2{
     margin-left: 30px;
+    display: flex;
+    justify-content: flex-end;
   }
 
   .graph>span{
@@ -190,6 +213,13 @@ section.economie{
     border: solid, 5px;
     border-radius: 50px;
     width: 100%;
+    border-color: #fad254;
+  }
+
+  .graph1>img{
+    height:250px ;
+    border: solid, 5px;
+    border-radius: 50px;
     border-color: #fad254;
   }
 
@@ -227,8 +257,15 @@ section.economie{
     align-items: center;
     background-color: #74E6C7;
     border-radius: 50px;
-    height: 500px;
     width: 100%;
+    flex-direction: column;
+    justify-content: center;
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+
+  .presg{
+    font-weight: bold;
   }
 
   .texte3>span{
@@ -239,6 +276,12 @@ section.economie{
   }
 
   .eltd{
+    background-color: #B53a00;
+    border-radius: 50px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
     margin-top: 50px;
     width: 25%;
   }
