--- a/stylesEconomie.css
+++ b/stylesEconomie.css
@@ -139,8 +139,16 @@ footer>div{
   border-radius: 50px;
 }
 
-.contextéco>h2{
+h2{
   text-align: center;
+}
+
+.resnet{
+  padding: 20px;
+}
+
+.REX{
+  padding-left: 15px;
 }
 
 section.economie{
@@ -158,7 +166,6 @@ section.economie{
 
   .eltg{
     width: 70%;
-    background-color: #B53a00;
     padding: 5px;
     border-radius: 50px;
   }
@@ -232,7 +239,56 @@ section.economie{
   .ensemble1{
     display: flex;
     width: 100%;
+    background-color: #B53a00;
     justify-content: space-between;
+    flex-direction: column;
+    padding: 5px;
+    border-radius: 50px;
+  }
+
+  .graph3>img{
+    height:250px ;
+    border: solid, 5px;
+    border-radius: 50px;
+    border-color: #fad254;
+  }
+
+  .ensemble2{
+    display: flex;
+    margin-top: 10px;
+    background-color: #B53a00;
+    border-radius: 50px;
+    padding: 5px;
+    flex-direction: column;
+  }
+
+  .ensemble3{
+    display: flex;
+  }
+
+  .texte5{
+    background-color: #74E6C7;
+    border-radius: 50px;
+    padding: 20px;
+  }
+
+  
+
+  .ensemble12{
+    display: flex;
+  }
+
+  .texte4{
+    display: flex;
+    background-color: #74E6C7;
+    border-radius: 50px;
+    padding: 20px;
+    margin-left: 15px;
+    align-items: center;
+  }
+
+  .renta{
+    display: flex;
   }
 
   .texte2{
@@ -243,7 +299,6 @@ section.economie{
     min-height: 200px;
     width: 75%;
     border-right: 5px;
-
   }
 
   .texte2>span{
