--- a/styles_chiffre.css
+++ b/styles_chiffre.css
@@ -94,7 +94,12 @@ header a{
   padding: 30px;
   background-color: rgba(127, 127, 127, 0.2);
   border-radius: 10px;
+}
 
+.item_sans_image{
+  padding: 30px;
+  background-color: rgba(127, 127, 127, 0.2);
+  border-radius: 10px;
 }
 
 .positif{
@@ -116,25 +121,8 @@ a {
   background-color: rgba(127, 127, 127, 0.5);;
 }
 
-
 /*--Appartion de graphique --*/
 
-
-#c1 {
-  display: none;
-}
-
-#c1:target {
-  display: flex;
-}
-
-#c2 {
-  display: none;
-}
-
-#c2:target {
-  display: flex;
-}
 
 #c3a {
   display: none;
@@ -142,6 +130,7 @@ a {
 
 #c3a:target {
   display: flex;
+  width: 650px;
 }
 
 #c3b {
@@ -150,15 +139,9 @@ a {
 
 #c3b:target {
   display: flex;
+  width: 350px;
 }
 
-#c3c {
-  display: none;
-}
-
-#c3c:target {
-  display: flex;
-}
 
 #c4 {
   display: none;
@@ -174,14 +157,7 @@ a {
 
 #c5:target {
   display: flex;
-}
-
-#c6 {
-  display: none;
-}
-
-#c6:target {
-  display: flex;
+  width: 650px;
 }
 
 #c7 {
@@ -190,7 +166,7 @@ a {
 
 #c7:target {
   display: flex;
-  scroll-behavior:smooth;
+  width: 650px;
 }
 
 
